# rustoshi

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml
.github/workflows/: ci.yml  release.yml.disabled
CORE-PARITY-AUDIT/: w142-segwit-witness-validation.md  w143-block-validation.md  w144-script-verify-flags.md  w145-subsidy-fees-maxmoney.md  w146-block-storage.md  w147-utxo-database-chainstate.md  w148-headers-first-sync-reorg.md  w149-pruning-assumevalid-minimumchainwork.md  w150-atmp-prechecks-policychecks.md  w151-package-relay-rbf.md  w152-tx-relay-inv-orphan.md  w153-mempool-eviction-minrelay.md  w154-createnewblock-blockassembler.md  w155-getblocktemplate-submitblock-bip22.md  w156-bip152-cmpctblock-blocktxn.md  w157-signet-bip94-miner-constants.md  w158-bip322-message-signing.md  w159-libsecp256k1-ffi-batch-verify.md  w160-ecdsa-schnorr-rfc6979-sighash.md  w161-bip32-bip39-bip43-bip44-hd-derivation.md
audit/: w123_mining_gbt.md  w124_operator_experience.md  w125_rpc_error_parity.md  w126_bip152_compact_blocks.md  w127_taproot.md  w128_addrman.md  w129_coin_selection.md  w130_bip125_feebumper_rule3.md  w131_descriptors_miniscript.md  w132_nsequence_csv_mtp.md  w133_index_databases.md  w134_bip37_bloom_filter.md  w135_standardness_rules.md  w136_relay_flags.md  w137_psbt.md  w138_assumeutxo.md  w139_fee_estimation.md  w140_http_rpcauth.md  w141_zmq_rest_notify.md
crates/consensus/: Cargo.toml
crates/consensus/src/: block_template.rs  campaign_assumeutxo.rs  chain_manager.rs  chain_state.rs  fee_estimator.rs  lib.rs  mempool.rs  mempool_persist.rs  orphanage.rs  params.rs  pow.rs  sig_cache.rs  validation.rs  versionbits.rs
crates/consensus/src/script/: interpreter.rs  mod.rs  num.rs  opcodes.rs  taproot_sighash.rs
crates/consensus/tests/: script_vectors.rs  sighash_vectors.rs  test_finding4_16.rs  test_w106_mempool.rs  test_w108_gbt.rs  test_w114_fee_estimation.rs  test_w116_package_relay.rs  test_w120_mempool_rbf.rs  test_w123_mining_gbt.rs  test_w127_taproot.rs  test_w132_nsequence_csv_mtp.rs  test_w135_standardness.rs  test_w139_fee_estimation.rs  w101_activate_best_chain_gates.rs  w105_checkqueue.rs  w97_accept_block_gates.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: address.rs  base58.rs  bech32.rs  context.rs  hashes.rs  hwaccel.rs  keys.rs  lib.rs  p2sh.rs  sha256.rs  sighash.rs  taproot.rs
crates/network/: Cargo.toml
crates/network/src/: addr.rs  asmap.rs  block_download.rs  compact_blocks.rs  erlay.rs  eviction.rs  header_sync.rs  headers_presync.rs  lib.rs  message.rs  misbehavior.rs  netgroup.rs  peer.rs  peer_manager.rs  proxy.rs  relay.rs  stale_detection.rs  v2_test_lock.rs  v2_transport.rs  w103_tx_relay_tests.rs  w104_addrman_tests.rs  w115_asmap_tests.rs  w99_net_processing_tests.rs
crates/network/tests/: test_feefilter_wiring.rs  test_w126_bip152_compact_blocks.rs  test_w128_addrman.rs  test_w134_bip37_bloom_filter.rs  test_w136_relay_flags.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: block.rs  hash.rs  lib.rs  serialize.rs  transaction.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: auth.rs  lib.rs  logging.rs  payjoin_sender.rs  rest.rs  server.rs  tip_notifier.rs  tls.rs  types.rs  wallet.rs  wallet_route.rs  zmq.rs
crates/rpc/tests/: test_converttopsbt_joinpsbts.rs  test_fix65_payjoin_receiver.rs  test_fix66_payjoin_sender.rs  test_listdescriptors.rs  test_side_branch_header_check.rs  test_signrawtransactionwithkey.rs  test_w125_error_parity.rs  test_w140_http_rpcauth.rs  test_w141_zmq_rest_notify.rs  test_walletprocesspsbt.rs  wire_key_order.rs
crates/storage/: Cargo.toml
crates/storage/src/: block_store.rs  blockstore.rs  columns.rs  db.rs  lib.rs  prune.rs  snapshot.rs  undo.rs  utxo_cache.rs  utxo_cache_w100_tests.rs  w102_assumeutxo_gates.rs  w109_block_index_gates.rs
crates/storage/src/indexes/: blockfilterindex.rs  coinstatsindex.rs  gcs.rs  mod.rs  muhash.rs  txindex.rs  txospenderindex.rs
crates/storage/tests/: test_w121_compact_filters.rs  test_w122_gcs_codec_stress.rs  test_w133_index_databases.rs  test_w138_assumeutxo.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: bip21.rs  bip39.rs  coin_selection.rs  db.rs  descriptor.rs  encryption.rs  hd.rs  lib.rs  manager.rs  miniscript.rs  payjoin.rs  psbt.rs  wallet.rs
crates/wallet/tests/: test_fix62_bip21.rs  test_fix66_payjoin_sender.rs  test_w111_wallet.rs  test_w118_wallet.rs  test_w119_payjoin.rs  test_w129_coin_selection.rs  test_w130_bip125_feebumper_rule3.rs  test_w131_descriptors_miniscript.rs  test_w137_psbt.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_block_decode.rs  fuzz_eval_script.rs  fuzz_netmsg_decode.rs  fuzz_tx_decode.rs
rustoshi/: Cargo.toml
rustoshi/benches/: benchmarks.rs
rustoshi/src/: main.rs  ops.rs
rustoshi/tests/: integration_tests.rs  known_blocks.rs  property_tests.rs  test_w107_compactsize.rs  test_w110_bloom_filter.rs  test_w112_compact_blocks.rs  test_w113_coin_selection.rs  test_w117_bip155_networks.rs  test_w124_operator_experience.rs
tools/: multiwallet_routing_test.sh
