[workspace]
members = [
    "rustoshi",
    "crates/crypto",
    "crates/network",
    "crates/consensus",
    "crates/storage",
    "crates/rpc",
    "crates/wallet",
    "crates/primitives",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT"

[workspace.dependencies]
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
bytes = "1.5"
rand = "0.8"
sha2 = "0.10"
ripemd = "0.1"
secp256k1 = { version = "0.28", features = ["global-context", "rand-std", "serde"] }
rocksdb = "0.24"
axum = "0.7"
jsonrpsee = { version = "0.22", features = ["server", "macros"] }
proptest = "1.4"
