[package]
name = "rustoshi-consensus"
version.workspace = true
edition.workspace = true

[dependencies]
rustoshi-primitives = { path = "../primitives" }
rustoshi-crypto = { path = "../crypto" }
thiserror.workspace = true
tracing.workspace = true
sha1 = "0.10"
sha2 = "0.10"
ripemd = "0.1"
secp256k1.workspace = true
rayon = "1.8"
dashmap = "6.0"
rand = "0.8"

[dev-dependencies]
serde_json.workspace = true
hex.workspace = true
sha2 = "0.10"
secp256k1.workspace = true
rustoshi-crypto = { path = "../crypto" }
rustoshi-primitives = { path = "../primitives" }
