[package]
name = "rustoshi-network"
version.workspace = true
edition.workspace = true

[dependencies]
rustoshi-primitives = { path = "../primitives" }
rustoshi-crypto = { path = "../crypto" }
rustoshi-consensus = { path = "../consensus" }
thiserror.workspace = true
tokio.workspace = true
bytes.workspace = true
tracing.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
siphasher = "1.0"
secp256k1.workspace = true
chacha20poly1305 = "0.10"
chacha20 = "0.9"
hkdf = "0.12"
sha2.workspace = true
hex.workspace = true
lazy_static = "1.4"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.16"
