[package]
name = "rustoshi-rpc"
version.workspace = true
edition.workspace = true

[dependencies]
rustoshi-primitives = { path = "../primitives" }
rustoshi-consensus = { path = "../consensus" }
rustoshi-storage = { path = "../storage" }
rustoshi-network = { path = "../network" }
rustoshi-crypto = { path = "../crypto" }
rustoshi-wallet = { path = "../wallet" }
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
jsonrpsee.workspace = true
tracing.workspace = true
hex.workspace = true
zmq.workspace = true
rand.workspace = true
base64 = "0.22"
tower = "0.4"
hyper = "0.14"
http = "0.2"

[dev-dependencies]
tempfile = "3.16"
zmq.workspace = true
