[package]
name = "rustoshi-rpc"
version.workspace = true
edition.workspace = true

[dependencies]
rustoshi-primitives = { path = "../primitives" }
rustoshi-consensus = { path = "../consensus" }
rustoshi-storage = { path = "../storage" }
rustoshi-network = { path = "../network" }
rustoshi-crypto = { path = "../crypto" }
rustoshi-wallet = { path = "../wallet" }
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
axum.workspace = true
jsonrpsee.workspace = true
tracing.workspace = true
hex.workspace = true
sha2.workspace = true
zmq.workspace = true
rand.workspace = true
base64 = "0.22"
tower = "0.4"
hyper = "0.14"
http = "0.2"
# TLS termination for opt-in HTTPS RPC (W119 / FIX-64).
# Default-features disabled to drop the `aws-lc-rs` crypto provider (which
# requires a C toolchain + bindgen at build time) in favor of the pure-Rust
# `ring` provider, keeping the build self-contained.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-pemfile = "2"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.16"
zmq.workspace = true
# Self-signed cert generation for HTTPS tests (FIX-64).
rcgen = "0.13"
