[package]
name = "rustoshi-storage"
version.workspace = true
edition.workspace = true

[dependencies]
rustoshi-primitives = { path = "../primitives" }
rustoshi-consensus = { path = "../consensus" }
thiserror.workspace = true
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
bitflags = "2"

[dev-dependencies]
tempfile = "3.10"
