[package]
name = "rustoshi-wallet"
version.workspace = true
edition.workspace = true

[dependencies]
rustoshi-primitives = { path = "../primitives" }
rustoshi-crypto = { path = "../crypto" }
rustoshi-storage = { path = "../storage" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
