[package]
name = "rustoshi-wallet"
version.workspace = true
edition.workspace = true

[dependencies]
rustoshi-primitives = { path = "../primitives" }
rustoshi-crypto = { path = "../crypto" }
rustoshi-storage = { path = "../storage" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
sha2.workspace = true
hmac = "0.12"
secp256k1.workspace = true
hex.workspace = true

[dev-dependencies]
proptest.workspace = true
