[package]
name = "rustoshi-wallet"
version.workspace = true
edition.workspace = true

[dependencies]
rustoshi-primitives = { path = "../primitives" }
rustoshi-crypto = { path = "../crypto" }
rustoshi-storage = { path = "../storage" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
sha2.workspace = true
hmac = "0.12"
secp256k1.workspace = true
hex.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
getrandom = "0.2"
tempfile = "3.16"

[dev-dependencies]
proptest.workspace = true
rand_chacha = "0.3"
